# qwen3-vl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
docs/superpowers/plans/: 2026-04-28-qwen-engine-impl.md
docs/superpowers/specs/: 2026-04-28-qwen-engine-design.md
examples/: smoke.rs
src/: engine.rs  error.rs  image_analysis.rs  lib.rs
tests/: integration_scene.rs
